# cc-message-capture

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: addon_capture.py
src-tauri/src/: cert.rs  download.rs  lib.rs  main.rs  proxy.rs
src/assets/styles/: global.less
src/components/: ClaudeMessageViewer.tsx
src/services/: claudeParser.ts
src/types/: index.ts
src/views/: Capture.tsx
