[package]
name = "cc-message-capture"
version = "0.2.2"
description = "Claude API message capture tool"
authors = ["you"]
edition = "2021"

[lib]
name = "cc_message_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
zip = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.3"
